--- a/src/main/resources/public/stylesheets/staffmenu.css
+++ b/src/main/resources/public/stylesheets/staffmenu.css
@@ -3,7 +3,7 @@
 :root{
     --black: #1B1722;
     --white: #f2e8b9;
-    background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
+    /* background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png"); */
     --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -88,6 +88,13 @@ border-radius: 5rem;
     cursor: pointer;
 }
 /*header ends here*/
-table{
-    padding-top: 20px;
-}
+
+    body {
+      background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
+    }
+
+    .image-table {
+        display: inline-block;
+        width: max-content;
+        
+      }
