--- a/src/main/resources/templates/user/customerregister.html
+++ b/src/main/resources/templates/user/customerregister.html
@@ -17,7 +17,7 @@
   </head>
  
   <body>
-    <h1 class="registerform d-flex justify-content-center" style="font-weight: 800; font-size: 50px; margin: 5% 0;">Create your account</h1>
+    <h1 class="registerform d-flex justify-content-center" style="font-weight: 800; font-size: 50px; margin-bottom: 5%;">Create your account</h1>
     <main class="formcontainer">
       <form 
         class="d-flex justify-content-center"
@@ -49,13 +49,13 @@
             <div class="mb-3">
                 <label for="exampleInputPhone" class="form-label" style="font-size: 18px;">Phone Number</label>
                 <input type="tel"
-                 class="form-control"
-                 pattern="[0-9]{10,11}" 
-                 id="exampleInputNumber"
-                  placeholder="e.g. 012 345 6789"
-                   maxlength = "11" 
-                   required aria-describedby="phonenumHelp"
-                   name="custphone" style="font-size: 18px;">
+                class="form-control"
+                pattern="[0-9]{10,11}" 
+                id="exampleInputNumber"
+                placeholder="e.g. 0123456789"
+                maxlength = "12" 
+                required aria-describedby="phonenumHelp"
+                name="custphone" style="font-size: 18px;">
               </div>
               <div class="mb-3">
                 <label for="exampleInputAddress" class="form-label" style="font-size: 18px;">Address</label>
