--- a/src/main/resources/templates/admin/staffmenu.html
+++ b/src/main/resources/templates/admin/staffmenu.html
@@ -57,18 +57,21 @@
             </thead>
             <tbody>
                 <tr th:each="cake : ${cakes}">
-                    <td th:text="${cake.proid}"></td>
+                    <td name="proid" th:text="${cake.proid}"></td>
                     <td th:text="${cake.proname}"></td>
                     <td th:text="${cake.proprice}"></td>
                     <td><img th:src="${cake.proimage}" alt="Product Image" style="width: 200px; height: 200px; "></td>
                     <td th:text="${cake.cakesize}"></td>
-                    <td>
-                      <span><button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#deletestaffModal">
+                    <td style="display: d-flex align-items center;">
+                      <span><a th:href="@{/productdetail?proid=}+${cake.proid}" th:value="${cake.proid}" ><button 
+                        type="button" class="btn btn-warning" >
                         EDIT PRODUCT
-                       </button></span>
-                      <span><button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletestaffModal">
+                       </button></a></span>
+                      <span><a th:href="@{/deletemenu(proid=${cake.proid})}"
+                         th:value="${cake.proid}" onclick="return confirm('Are you sure you want to delete this product?')">
+                         <button type="button" class="btn btn-danger">
                         DELETE PRODUCT
-                       </button></span>
+                       </button></a></span>
                     </td>
                 </tr>
             </tbody>
@@ -92,45 +95,28 @@
             </thead>
             <tbody>
                 <tr th:each="cupcake : ${cupcakes}">
-                    <td th:text="${cupcake.proid}"></td>
+                    <td name="proid" th:text="${cupcake.proid}"></td>
                     <td th:text="${cupcake.proname}"></td>
                     <td th:text="${cupcake.proprice}"></td>
                     <td> <img th:src="${cupcake.proimage}" alt="Product Image" style="width: 200px; height: 200px;"></td>
                     <td th:text="${cupcake.cuptoppings}"></td>
-                    <td><span><button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#editproductModal">
+                    <td><span><a th:href="@{/productdetail?proid=}+${cupcake.proid}" th:value="${cupcake.proid}" ><button 
+                      type="button" class="btn btn-warning">
                       EDIT PRODUCT
-                     </button></span>
-                    <span><button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deletestaffModal">
+                     </button></a></span>
+                    <span><a th:href="@{/deletemenu(proid=${cupcake.proid})}" th:value="${cupcake.proid}" onclick="return confirm('Are you sure you want to delete this product?')"><button type="button" class="btn btn-danger" >
                       DELETE PRODUCT
-                     </button></span></td>
+                     </button></a></span></td>
                 </tr>
-            </tbody>
+            </tbody>  
         </table>
         </div>
-        </div>
-        <!-- Modal -->
-        <div class="modal fade" id="editproductModal" tabindex="-1" role="dialog" aria-labelledby="editproductModal" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Confirmation</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                Are you sure you want to delete this item?
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">CANCEL</button>
-                <a id="deleteButton" class="btn btn-danger">SAVE</a>
-              </div>
-            </div>
-          </div>
         </div>
         <div class="d-flex justify-content-center">
         <a th:href="@{/cakeregister}"><button class="btn btn-success" type="button">ADD NEW PRODUCTS</button></a>
         </div>
+
+        
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
