--- a/src/main/resources/templates/admin/stafflist.html
+++ b/src/main/resources/templates/admin/stafflist.html
@@ -34,7 +34,7 @@
   <body class="py-5">
     <h1 class="text-center " style="font-size: x-large; font-weight: bold;">Baker Staffs</h1>
     <div class="container py-5 ">
-        <div clss="py-5"> 
+        <div cla    ss="py-5"> 
         <div class="">
     <table class=" table-bordered table-striped position-absolute top-30 start-50 translate-middle">
         <thead class="table-light">
