--- a/src/main/resources/public/stylesheets/stafforder.css
+++ b/src/main/resources/public/stylesheets/stafforder.css
@@ -88,7 +88,9 @@ border-radius: 5rem;
     cursor: pointer;
 }
 /*header ends here*/
-
+body{
+    background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
+}
 .table{
     padding-top: 8% ;
     align-items: center;
