--- a/src/main/resources/public/stylesheets/stafforderhistory.css
+++ b/src/main/resources/public/stylesheets/stafforderhistory.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+:root{
+    --black: #1B1722;
+    --white: #f2e8b9;
+    /* background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png"); */
+    --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 *{
     font-family: 'Quicksand', sans-serif;
     margin: 0; padding: 0;
@@ -10,12 +17,26 @@
     transition: .2s linear;
 }
 
-:root{
-    --black: #1B1722;
-    --white: #f2e8b9;
-    background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
-    --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+html{
+font-size: 62.5%;   
+overflow-x: hidden;
+scroll-padding-top: 7rem;
+scroll-behavior: smooth;
 }
+
+html::-webkit-scrollbar{
+width: .8rem;
+}
+
+html::-webkit-scrollbar-track{
+background: transparent;
+}
+
+html::-webkit-scrollbar-thumb{
+background-color: var(--white);
+border-radius: 5rem;
+}
+
 /*header starts here*/
 .header{
     top: 0;right: 0;left: 0;
@@ -34,12 +55,12 @@
 }
 
 .header .logoContent .logo img{
-    height: 3rem;
+    height: 4rem;
 }
 
 .header .logoContent .logoName{
     color: var(--black);
-    font-size: 1rem;
+    font-size: 2rem;
     font-weight: bolder;
 }
 
@@ -48,7 +69,7 @@
 }
 
 .header .navbar a{
-    font-size: 1rem;
+    font-size: 2rem;
     margin-right: 3rem;
     color: var(--black);
     font-weight: bold;
@@ -61,26 +82,20 @@
 }
 
 .header .icon i{
-    font-size: 1rem;
-    margin-right: 1rem;
+    font-size: 2rem;
+    margin-right: 2rem;
     color: var(--black);
     cursor: pointer;
 }
-
 /*header ends here*/
-body{
-    background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
-    margin-top: 50px;
-    font-size: larger;
-    padding-top: 10px;
-}
-.container {
-    display: flex;
-    align-items: center;
-  }
-  table {
-    font-size: x-large;
-    margin-top: 2rem;
-    width: 80%;
-    text-align: center;
-  }
+
+    body {
+      background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
+    }
+
+    table {
+        font-size: x-large;
+        /* margin-top: 2rem; */
+        height: 0%;
+        text-align: center;
+      }
