--- a/src/main/resources/templates/custprofile.html
+++ b/src/main/resources/templates/custprofile.html
@@ -32,7 +32,7 @@
     </header>
     <!-- header section end here  -->  
 
-    <body>
+    <body style="padding-top: 70px; ">
       <div class="formcontainer">
           <h1 class="registerform d-flex justify-content-center">CUSTOMER PROFILE</h1>
           <form 
@@ -42,7 +42,7 @@
           modelAttribute  ="custprofile"
           th:object="${custprofile}"
           >
-          <div class="card col-6">
+          <div class="card col-6" >
           <div class="card-body">
               <div class="mb-3">
                   <label for="exampleInputName" class="form-label ">Full Name</label>
@@ -151,37 +151,5 @@
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
     </body>
-    <!-- footer section start here  -->
-  <footer class="footer" id="contact">
-    <div class="box-container">
-        
-        <div class="box">
-            <h3>Opening Hours</h3>
-            <p>Weekdays: 10:00AM - 5:00PM <br> Weekends: 10:00AM - 6:00PM</p>
-        </div>
-
-        <div class="box">
-            <h3>Contact Us</h3>
-            <p>iRizq Kitchen Sabak Bernam (HQ)</p>
-            <p>No.12 Jalan Dewan, Pekan Sabak Bernam, <br> 45200 Sabak Bernam, Selangor</p>
-            <a href="tel:+60 1123 4567" target="_blank"> <i class="fas fa-phone"></i>+60 1123 4567</a>
-            <a href="mailto: irizqkitchen@gmail.com" target="_blank"> <i class="fas fa-envelope"></i>irizqkitchen@gmail.com</a>
-        </div>
-
-        <div class="box">
-            <h3>About Us</h3>
-            <a th:href="@{http://localhost:5000/about#:~:text=Location-,Vision,-Let%20us%20eat}"> <i class="fas fa-arrow-right"></i>Vision</a>
-            <a th:href="@{http://localhost:5000/about#:~:text=in%20Sabak%20Bernam-,Mission,-Handcrafted%20with%20love}"> <i class="fas fa-arrow-right"></i>Mission</a>
-            <a href="https://goo.gl/maps/Yeepko5QdJ3EMDox7" target="_blank"> <i class="fas fa-arrow-right"></i>Location</a>
-        </div>
-
-    </div>
-    <div class="share">
-        <a href="https://web.facebook.com/rizq.khazinuddin" class="fab fa-facebook-f" target="_blank"></a>
-        <a href="https://www.instagram.com/irizq_kitchen/" class="fab fa-instagram" target="_blank"></a>
-    </div>
-    <div class="credit">
-        irizqkitchen <span>&copy;</span> 2022
-    </div>
-  </footer>
+    
   </html>
