--- a/src/main/resources/templates/user/catalogue.html
+++ b/src/main/resources/templates/user/catalogue.html
@@ -31,9 +31,7 @@
         </div>
   
         <nav class="navbar">
-            <a th:href="@{/catalogue}">Catalogue</a>
-            <a th:href="@{/about}">About</a>
-            <a th:href="@{/faqs}">FAQs</a>
+          <a th:href="@{/orderHistory}">Order History</a>
             <a th:href="@{/custprofile}">Profile</a>
         </nav>
     </header>
@@ -41,162 +39,138 @@
 
     <main>
         <h1>CATALOGUE</h1>
-        <table class="tableOrder">
-    
-            <!-- KEK PISANG -->
-            <tr class="tableRow">
-              <td th:text="${cakes.cakename}" >KEK PISANG</td>
-              <td class="tableOption1">SIZE</td>
-            </tr>
-            <tr>
-              <td class="tableListPics1" colspan="2">
-                <div class="containerimage">
-                  <div class="panel" id="kekpisang1" th:style="'background: url(/image/kekpisang.jpg) no-repeat center; background-size: cover;'"></div>
-                  <!-- <div class="panel" id="kekpisang2" th:style="'background: url(/image/kekpisang2.jpg) no-repeat center; background-size: cover;'"></div>
-                  <div class="panel" id="kekpisang3" th:style="'background: url(/image/kekpisang3.jpg) no-repeat center; background-size: cover;'"></div> -->
-                </div>
-              </td>
-              <td class="tableRadio1">
-                <ul>
-                  <li>6" (RM13)</li>
-                  <li>8" (RM26)</li>
-                </ul><br>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
-    
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                  <div class="offcanvas-header">
-                  <h2 class="offcanvas-title1" id="offcanvasRightLabel">Kek Pisang</h2>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                  </div>
-    
-                  <div class="offcanvas-body">
-                    <div class="panel" id="kekpisang1" th:style="'background: url(/image/kekpisang.jpg) no-repeat center; background-size: cover;'"></div>
-                    <div class="myForm1">
-                      <h3 class="offcanvas-title1" id="offcanvasRightLabel">Order Details</h3><br><br>
-                      <form id="myForm1" action="/src/main/resources/templates/user/paymentFileUpload.html">
-                        <label for="cakesize">Size: </label>
-                        <select name="cakesize1" id="cakesize1">
-                          <option value="size1">Choose size</option>
-                          <option value="size2">6"</option>
-                          <option value="size3">8"</option>
-                        </select><br>
-                        <label for="cakeqty">Quantity: </label>
-                        <input type="number" name="cakeqty1" id="cakeqty1" placeholder="eg. 1" min="1"><br>
-                        <label for="cakeprice1">Total: RM </label><br><br>
-                        <div class="submitOrder1" id="submitOrder1">
-                          <a th:href="@{/payment}" style="color: #000000; font-weight: 800; border: 1px solid #f9eaa7; border-radius: 15px; background-color: #f9eaa7; padding: 8px 30%;">Place Order</a>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-    
-            <!-- KEK BATIK INDULGENCE -->
-            <tr class="tableRow">
-              <td class="tableList2" colspan="2">KEK BATIK INDULGENCE</td>
-              <td class="tableOption2">SIZE</td>
-            </tr>
-            <tr>
-              <td class="tableListPics2" colspan="2">
-                <div class="containerimage">
-                  <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg) no-repeat center; background-size: cover;'"></div>
-                  <!-- <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg) no-repeat center; background-size: cover;'"></div>
-                  <div class="panel" id="kekbatik3" th:style="'background: url(/image/kekbatik3.jpg) no-repeat center; background-size: cover;'"></div> -->
-                </div>
-              </td>
-              <td class="tableRadio2">
-                <ul>
-                  <li>6" (RM32)</li>
-                  <li>8" (RM65)</li>
-                </ul><br>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight2" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
-    
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight2" aria-labelledby="offcanvasRightLabel">
-                  <div class="offcanvas-header">
-                  <h2 class="offcanvas-title2" id="offcanvasRightLabel">Kek Batik Indulgence</h2>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                  </div>
-    
-                  <div class="offcanvas-body">
-                    <div class="panel" id="kekbatik2" th:style="'background: url(/image/kekbatik2.jpg) no-repeat center; background-size: cover;'"></div>
-                    <div class="myForm2">
-                      <h3 class="offcanvas-title1" id="offcanvasRightLabel">Order Details</h3><br><br>
-                      <form id="myForm2" action="/src/main/resources/templates/user/paymentFileUpload.html">
-                        <label for="cakesize">Size: </label>
-                        <select name="cakesize2" id="cakesize2">
-                          <option value="size4">Choose size</option>
-                          <option value="size5">6"</option>
-                          <option value="size6">8"</option>
-                        </select><br>
-                        <label for="cakeqty">Quantity: </label>
-                        <input type="number" name="cakeqty2" id="cakeqty2" placeholder="eg. 1" min="1"><br>
-                        <label for="cakeprice2">Total: RM </label><br><br>
-                        <div class="submitOrder2" id="submitOrder2">
-                          <a th:href="@{/payment}" style="color: #000000; font-weight: 800; border: 1px solid #f9eaa7; border-radius: 15px; background-color: #f9eaa7; padding: 8px 30%;">Place Order</a>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-    
-            <!-- CUPCAKES -->
-            <tr class="tableRow">
-              <td class="tableList3" colspan="2">CUPCAKES</td>
-              <td class="tableOption3">TOPPINGS</td>
-            </tr>
-            <tr>
-              <td class="tableListPics3" colspan="2">
-                <div class="containerimage">
-                  <div class="panel" id="cupcake1" th:style="'background: url(/image/cupcake.jpg) no-repeat center; background-size: cover;'"></div>
-                  <!-- <div class="panel" id="brownies2" th:style="'background: url(/image/brownies2.jpg) no-repeat center; background-size: cover;'"></div>
-                  <div class="panel" id="brownies3" th:style="'background: url(/image/brownies3.jpg) no-repeat center; background-size: cover;'"></div> -->
-                </div>
-              </td>
-              <td class="tableRadio3">
-                <ul>
-                  <li>Chocolate</li>
-                  <li>Sprinkles</li>
-                  <li>Marshmallow</li>
-                </ul><br>
+       
+        <h2 class="d-flex justify-content-center" style="margin-top: 40px; font-weight: bold;">CAKES</h2>
+        <div style="display: flex; justify-content: center;">
+        <div style="text-align: center;">
+        <table class="table table-bordered border-dark image-table " style="font-size: 16px; background-color: #efdbaa;" >
+            <thead>
+                <tr style="background-color: #cfbe93;">
+                    <th>Product ID</th>
+                    <th>Product Name</th>
+                    <th>Product Price (RM)</th>
+                    <th>Product Image</th>
+                    <th>Cake Size (INCH)</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="cake : ${cakes}">
+                    <td  th:text="${cake.proid}"></td>
+                    <td th:text="${cake.proname}"></td>
+                    <td name="proprice" th:text="${cake.proprice}"></td>
+                    <td><img th:src="${cake.proimage}" alt="Product Image" style="width: 200px; height: 200px; "></td>
+                    <td th:text="${cake.cakesize}"></td>
+                    <td style="display: d-flex align-items center;">
+                     
+                      <button class="btn btn-primary" 
+                      type="button" data-bs-toggle="offcanvas" 
+                      data-bs-target="#offcanvasRight"
+                       aria-controls="offcanvasRight" 
+                       style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;">
+                       <strong>Order Here</strong></button>
 
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight3" aria-controls="offcanvasRight" style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;"><strong>Order Here</strong></button>
-    
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight3" aria-labelledby="offcanvasRightLabel">
-                  <div class="offcanvas-header">
-                  <h2 class="offcanvas-title2" id="offcanvasRightLabel">Cupcakes</h2>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                  </div>
-    
-                  <div class="offcanvas-body">
-                    <div class="panel" id="cupcake1" th:style="'background: url(/image/cupcake.jpg) no-repeat center; background-size: cover;'"></div>
-                    <div class="myForm3">
-                      <h3 class="offcanvas-title3" id="offcanvasRightLabel">Order Details</h3><br><br>
-                      <form id="myForm3" action="/src/main/resources/templates/user/paymentFileUpload.html">
-                        <label for="cakesize">Size: </label>
-                        <select name="cupcaketopping" id="cupcaketopping">
-                          <option value="topping1">Choose topping</option>
-                          <option value="topping2">Chocolate</option>
-                          <option value="topping3">Sprinkles</option>
-                          <option value="topping4">Marshmallow</option>
-                        </select><br>
-                        <label for="cakeqty">Quantity: </label>
-                        <input type="number" name="cakeqty3" id="cakeqty3" placeholder="eg. 1" min="1"><br>
-                        <label for="cakeprice3">Total: RM </label><br><br>
-                        <div class="submitOrder3" id="submitOrder3">
-                          <a th:href="@{/payment}" style="color: #000000; font-weight: 800; border: 1px solid #f9eaa7; border-radius: 15px; background-color: #f9eaa7; padding: 8px 30%;">Place Order</a>
+                       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas-header">
+                        <h2 class="offcanvas-title1" id="offcanvasRightLabel" th:text="${cake.proname}"></h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </td>
-            </tr>
-          </table>
+          
+                        <div class="offcanvas-body">
+                          <div class="panel"><img th:src="${cake.proimage}" alt="Product Image" style="width: 200px; height: 200px; "></div>
+                          <div class="myForm1">
+                            <h3 class="offcanvas-title1" id="offcanvasRightLabel">Order Details</h3><br><br>
+                            
+                            <form id="myForm1" 
+                            th:action="@{/orderproduct}"
+                            method="post"
+                            modelAttribute="catalogue"
+                            th:object="(${catalogue})">
+                              <label for="cakesize">Size: </label>
+                              <input class="form-control-plaintext"name="prosize"  type="text" th:value="${cake.cakesize}"  readonly style="text-align: center;">
+                              <label for="cakeqty">Quantity: </label>
+                              <input type="number" name="quantity" id="cakeqty1" placeholder="eg. 1" min="1" style="background-color: #fff3d7;" ><br>
+                              <input type="hidden" name="proprice" th:value="${cake.proprice}" />
+                              <input type="hidden" name="proid" th:value="${cake.proid}" />
+                              <div class="submitOrder1" id="submitOrder1">
+                                <button type="submit" style="color: #000000; font-weight: 800; border: 1px solid #f9eaa7; border-radius: 15px; background-color: #f9eaa7; padding: 8px 30%;">Place Order</button>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+      </div>
+        </div>
+    
+        <h2 class="d-flex justify-content-center" style="margin-top: 30px; font-weight: bold;">CUPCAKES</h2>
+        <div style="display: flex; justify-content: center;">
+        <div style="text-align: center;">
+        <table class="table table-bordered border-dark image-table" style="font-size: 16px; background-color: #efdbaa;"  >
+            <thead >
+                <tr style="background-color: #cfbe93;">
+                    <th>Product ID</th>
+                    <th>Product Name</th>
+                    <th>Product Price (RM)</th>
+                    <th>Product Image</th>
+                    <th>Cupcake Toppings</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="cupcake : ${cupcakes}">
+                    <td  th:text="${cupcake.proid}"></td>
+                    <td th:text="${cupcake.proname}"></td>
+                    <td name="proprice" th:text="${cupcake.proprice}"></td>
+                    <td> <img th:src="${cupcake.proimage}" alt="Product Image" style="width: 200px; height: 200px;"></td>
+                    <td th:text="${cupcake.cuptoppings}"></td>
+                    <td>
+                      <button class="btn btn-primary" 
+                      type="button" data-bs-toggle="offcanvas" 
+                      data-bs-target="#offcanvasRight1"
+                       aria-controls="offcanvasRight1" 
+                       style="font-size: medium; background-color: #000000; border: #000000; border-radius: 8px; padding: 10px 20px;">
+                       <strong>Order Here</strong></button>
+
+                       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight1" aria-labelledby="offcanvasRightLabel1">
+                        <div class="offcanvas-header">
+                        <h2 class="offcanvas-title1" id="offcanvasRightLabel1" th:text="${cupcake.proname}"></h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+          
+                        <div class="offcanvas-body">
+                          <div class="panel"><img th:src="${cupcake.proimage}" alt="Product Image" style="width: 200px; height: 200px; "></div>
+                          <div class="myForm1">
+                            <h3 class="offcanvas-title1" id="offcanvasRightLabel">Order Details</h3><br><br>
+                            <form id="myForm1" 
+                            th:action="@{/orderproduct}"
+                            method="post"
+                            modelAttribute="catalogue"
+                            th:object="(${catalogue})">
+                              <label for="cakesize">Topping: </label>
+                              <input class="form-control-plaintext" type="text" th:value="${cupcake.cuptoppings}"  readonly style="text-align: center;">
+                              <label for="cakeqty">Quantity: </label>
+                              <input type="number" name="quantity" id="cakeqty1" placeholder="eg. 1" min="1" style="background-color: #fff3d7;" ><br>
+                              <input type="hidden" name="proprice" th:value="${cupcake.proprice}" />
+                              <input type="hidden" name="proid" th:value="${cupcake.proid}" />
+                              <div class="submitOrder1" id="submitOrder1">
+                                <button type="submit" style="color: #000000; font-weight: 800; border: 1px solid #f9eaa7; border-radius: 15px; background-color: #f9eaa7; padding: 8px 30%;">Place Order</button>
+                              </div>
+                            </form>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                </tr>
+            </tbody>  
+        </table>
+        </div>
+        </div>
     </main>
+    
 
     <!-- swiper js link  -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
