--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -92,7 +92,7 @@
 
         <!-- audio -->
         <div class="audioMusic">
-          <audio th:src="@{audio/bg-music.mp3}" controls autoplay class="my-audio " style="position: absolute; left: -9999px; top: -9999px; width: 1px; height: 1px; overflow: hidden;"></audio>
+          <audio th:src="@{audio/bg-music.mp3}"  class="my-audio " controls autoplay style="position: absolute; left: -9999px; top: -9999px; width: 1px; height: 1px; overflow: hidden;"></audio>
         </div>
 
     </main>
