--- a/src/main/resources/templates/user/payment.html
+++ b/src/main/resources/templates/user/payment.html
@@ -4,63 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
-
-        <!-- favicon -->
-        <link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
-
-        <!-- CSS Bootstrap only -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"/>
-
-        <!-- swiper link  -->
-        <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    
-        <!-- cdn icon link  -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    
-        <!-- custom css file  -->
-        <link rel="stylesheet" th:href="@{stylesheets/payment.css}">
-
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        
-        <style>
-            :root{
-            --black: #1B1722;
-            --white: #f2e8b9;
-            background-image: url("https://www.transparenttextures.com/patterns/low-contrast-linen.png");
-            --box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-            }
-
-            /* body {
-            padding: 20px;
-            } */
-
-            table {
-            width: 100%;
-            border-collapse: collapse;
-            }
-
-            th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-            }
-
-            h1, h2 {
-            margin-bottom: 20px;
-            }
-
-            form {
-            margin-top: 20px;
-            }
-
-            input[type="file"] {
-            margin-bottom: 10px;
-            }
-
-            .btn-cancel {
-            margin-right: 10px;
-            }
-        </style>
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" th:href="@{image/cake.png}">
+<!-- css bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+ <!-- cdn icon link  -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+ <!-- custom css file  -->
+ <link rel="stylesheet" th:href="@{stylesheets/payments.css}"> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body>
@@ -68,50 +21,133 @@
   <!-- header section start here  -->
   <header class="header">
     <div class="logoContent">
-        <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <a th:href="@{/catalogue}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
         <h1 class="logoName">iRizq Kitchen</h1>
     </div>
 
     <nav class="navbar">
-        <a th:href="@{/catalogue}">Catalogue</a>
-        <a th:href="@{/about}">About</a>
-        <a th:href="@{/faqs}">FAQs</a>
+        
+        <a th:href="@{/orderHistory}">Order History</a>
         <a th:href="@{/custprofile}">Profile</a>
-    </nav>
+    </nav> 
   </header>
   <!-- header section end here  -->  
   
-  <main>
-    <h1>Upload Image</h1>
+  <main style="padding-top: 100px;">
+    <h1 class="d-flex justify-content-center" style="font-weight: bold;">PAYMENT</h1>
   
-    <form method="post" enctype="multipart/form-data" th:action="@{/upload}">
-      <input type="file" name="image" accept="image/*">
+    <div class="d-flex justify-content-center">
+      <a>
+        <img th:src="@{image/qrpayment.jpeg}" alt="Forest" width="400" height="350" >
+      </a>
+    </div>
+    <form method="post" 
+    enctype="multipart/form-data" 
+    th:action="@{/payment}"
+    modelAttribute="payment"
+    class="d-flex justify-content-center"
+    >
+      <div class="card col-4 " style="background: #f2e8b9;">
+      <div class="card-body">
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="custname" class="col-sm-2 col-form-label d-flex justify-content-center" style="font-size: 14px; font-weight: bold;">Product Name :</label>
+        <div class="col-sm-10">
+        <input type="text" 
+                readonly class="form-control-plaintext d-flex justify-content-center" 
+                name="proname" style="font-size: 12px;" 
+                id="proname" th:value="${products.proname}">
+        <input type="hidden"
+               readonly class="form-control-plaintext" 
+               name="orderid" style="font-size: 12px;" 
+               id="orderid" th:value="${orders.orderid}">
+        </div>
+      </div>  
+
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="staticEmail" 
+               class="col-sm-2 col-form-label d-flex justify-content-center" 
+               style="font-size: 14px; font-weight: bold;">Quantity :</label>
+        <div class="col-sm-10">
+        <input type="text" 
+               readonly class="form-control-plaintext" 
+               name="orderdetailsqty" style="font-size: 12px;" 
+               id="orderdeailsqty" th:value="${orderdetails.orderdetailsqty}">
+        </div>
+      </div>
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="staticEmail" 
+               class="col-sm-2 col-form-label d-flex justify-content-center" 
+               style="font-size: 14px; font-weight: bold;">Customer Name :</label>
+        <div class="col-sm-10">
+        <input type="text" 
+               readonly class="form-control-plaintext" 
+               name="fullname" style="font-size: 12px;" 
+               id="fullname" th:value="${customers.fullname}">
+        </div>
+      </div>
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="staticEmail"
+               class="col-sm-2 col-form-label d-flex justify-content-center" 
+               style="font-size: 14px; font-weight: bold;">Customer Address :</label>
+        <div class="col-sm-10">
+        <input type="text" 
+               readonly class="form-control-plaintext" 
+               name="custaddress" style="font-size: 12px;" 
+               id="custaddres" th:value="${customers.custaddress}">
+        </div>
+      </div>
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="staticEmail" 
+               class="col-sm-2 col-form-label d-flex justify-content-center" 
+               style="font-size: 14px; font-weight: bold;">Price :</label>
+        <div class="col-sm-10">
+        <input type="text" 
+               readonly class="form-control-plaintext " 
+               name="orderprice" style="font-size: 12px;" id="orderprice"
+                th:value="${orders.orderprice}">
+        </div>
+      </div>
+      <div class="mb-3 d-flex justify-content-center">
+        <label for="formFile" 
+        class="form-label" style="font-weight: bold; font-size: 14px;">Payment Proof(JPEG only) </label>
+        <div>
+        <input class="form-control" 
+               type="file" name="paymentproofs" 
+               id="paymentproofs" accept="image/jpeg" required>
+        </div>
+      </div>
   
-      <br><br>
-  
-      <input type="submit" class="btn btn-primary" value="Submit">
-      <a href="cancel.html" class="btn btn-secondary btn-cancel">Cancel</a>
+      <br>
+      <div class="d-flex justify-content-center">
+      <button type="submit" class="btn btn-warning" style="font-weight: bold; border-radius: 15px; border-width: 5px;">PAY</button>
+      <!-- Button trigger modal -->
+      <button type="button" class="btn btn-danger" style="font-weight: bold; border-radius: 15px; border-width: 5px;" data-bs-toggle="modal" data-bs-target="#deleteorder">
+      Delete Order
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="deleteorder" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">Order Deletion</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            Are you sure want to delete this order?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancel</button>
+              <a th:href="@{/deleteorder(orderid=${orders.orderid})}"><button type="button" class="btn btn-danger">Yes,I'm sure</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+    </div></div>
     </form>
-
-    <h2>Order Details</h2>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Order ID</th>
-          <th>Product Name</th>
-          <th>Quantity</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Order details with oderstatus="pending" will be displayed here -->
-        <tr th:each="order : ${orders}" th:if="${order.orderStatus == 'pending'}">
-          <td th:text="${order.orderId}"></td>
-          <td th:text="${order.productName}"></td>
-          <td th:text="${order.quantity}"></td>
-        </tr>
-      </tbody>
-    </table>
+    </div>
+    </div>
   </main>
 
 </body>
