--- a/src/main/resources/templates/admin/productdetail.html
+++ b/src/main/resources/templates/admin/productdetail.html
@@ -18,16 +18,16 @@
     <!-- header section start here  -->
   <header class="header">
       <div class="logoContent">
-          <a th:href="@{/home}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+          <a th:href="@{/stafforder}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
           <h1 class="logoName">iRizq Kitchen</h1>
       </div>
     
       <nav class="navbar">
-          <a th:href="@{/home}">Home</a>
-          <a th:href="@{/catalogue}">Catalogue</a>
-          <a th:href="@{/about}">About</a>
-          <a th:href="@{/faqs}">FAQs</a>
-          <a th:href="@{/custprofile}">Profile</a>
+        <a th:href="@{/stafflist}">Baker list</a>
+        <a th:href="@{/stafforder}">Order List</a>
+        <a th:href="@{/staffmenu}">Menu</a>
+        <a th:href="@{/staffregister}">Register new baker</a>
+        <a th:href="@{/staffprofile}">Profile</a>
       </nav>
     </header>
     <!-- header section end here  -->  
