--- a/src/main/resources/templates/admin/stafforder.html
+++ b/src/main/resources/templates/admin/stafforder.html
@@ -23,10 +23,11 @@
     </div>
   
     <nav class="navbar">
-        <a th:href="@{/stafforder}">Order List</a>
-        <a th:href="@{/staffmenu}">Menu</a>
-        <a th:href="@{/staffregister}">Register new baker</a>
-        <a th:href="@{/staffprofile}">Profile</a>
+      <a th:href="@{/stafflist}">Baker list</a>
+      <a th:href="@{/stafforder}">Order List</a>
+      <a th:href="@{/staffmenu}">Menu</a>
+      <a th:href="@{/staffregister}">Register new baker</a>
+      <a th:href="@{/staffprofile}">Profile</a>
 
     </nav>
   </header>
