--- a/src/main/resources/templates/admin/cakeregister.html
+++ b/src/main/resources/templates/admin/cakeregister.html
@@ -18,15 +18,16 @@
 
   <header class="header">
     <div class="logoContent">
-        <a th:href="@{/bakermenu}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
+        <a th:href="@{/stafforder}" class="logo"><img th:src="@{image/cake.png}" alt="cake icon"></a>
         <h1 class="logoName">iRizq Kitchen Admin</h1>
     </div>
   
     <nav class="navbar">
-        <a th:href="@{/bakerorder}">Order List</a>
-        <a th:href="@{/bakermenu}">Menu</a>
-        <a th:href="@{/bakerregister}">Register new baker</a>
-        <a th:href="@{/bakerprofile}">Profile</a>
+      <a th:href="@{/stafflist}">Baker list</a>
+      <a th:href="@{/stafforder}">Order List</a>
+      <a th:href="@{/staffmenu}">Menu</a>
+      <a th:href="@{/staffregister}">Register new baker</a>
+      <a th:href="@{/staffprofile}">Profile</a>
     </nav>
   </header>
 
