--- a/src/main/resources/templates/admin/stafflist.html
+++ b/src/main/resources/templates/admin/stafflist.html
@@ -23,7 +23,7 @@
     </div>
   
     <nav class="navbar">
-        <a th:href="@{/stafflist}">Baker List</a>
+        <a th:href="@{/stafflist}">Baker list</a>
         <a th:href="@{/stafforder}">Order List</a>
         <a th:href="@{/staffmenu}">Menu</a>
         <a th:href="@{/staffregister}">Register new baker</a>
@@ -50,11 +50,10 @@
             <td th:text="${staff.fullname}"></td>
             <td th:text="${staff.email}"></td>
             <td>
-                <a class="delete-button btn-danger" 
-                   th:if="${isAdmin}"
+                <a th:if="${isAdmin}"
                    th:href="@{/deletestaff/(staffsid=${staff.userid})}" 
                    value="{staff.userid}" 
-                   onclick="return confirm('Are you sure you want to delete this staff?')">Delete</a>
+                   onclick="return confirm('Are you sure you want to delete this staff?')"><button class="btn delete-button btn-danger" >Delete</button></a>
             </td>
         </tr>
     </table>
