--- a/src/main/resources/templates/custprofile.html
+++ b/src/main/resources/templates/custprofile.html
@@ -23,11 +23,9 @@
       </div>
     
       <nav class="navbar">
-          <a th:href="@{/home}">Home</a>
-          <a th:href="@{/catalogue}">Catalogue</a>
-          <a th:href="@{/about}">About</a>
-          <a th:href="@{/faqs}">FAQs</a>
-          <a th:href="@{/custprofile}">Profile</a>
+        <a th:href="@{/orderHistory}">Order History</a>
+        <a th:href="@{/catalogue}">Catalogue</a>
+        <a th:href="@{/custprofile}">Profile</a>
       </nav>
     </header>
     <!-- header section end here  -->  
